--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-google-places-autocomplete": "^2.5.1",
-    "react-native-gesture-handler": "^2.9.0",
-    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-image-crop-picker": "^0.38.0",
     "react-native-image-picker": "^5.3.1",
     "react-native-maps": "^1.5.0",
@@ -54,7 +52,7 @@
     "react-native-svg": "^13.7.0",
     "react-native-svg-transformer": "^1.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^12.0.2",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
