Adding Chat support with notification setup

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -268,6 +268,11 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
+
+    implementation "com.squareup.okhttp3:okhttp:4.2.1"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:4.2.1"
+    
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
