--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-modal-datetime-picker": "^15.0.0",
     "react-native-otp-textinput": "^1.0.0",
     "react-native-paper": "^5.6.0",
+    "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
