--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-google-signin/google-signin": "^9.0.2",
     "@react-native-picker/picker": "^2.4.8",
     "@react-navigation/bottom-tabs": "^6.5.3",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "axios": "^1.3.5",
@@ -44,6 +45,7 @@
     "react-native-maps": "^1.5.0",
     "react-native-modal-datetime-picker": "^15.0.0",
     "react-native-otp-textinput": "^1.0.0",
+    "react-native-pager-view": "^6.2.0",
     "react-native-paper": "^5.6.0",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^3.1.0",
@@ -54,6 +56,7 @@
     "react-native-shadow-2": "^7.0.6",
     "react-native-svg": "^13.7.0",
     "react-native-svg-transformer": "^1.0.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^12.0.2",
     "react-redux": "^8.0.5",
