--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.logix.parkinbuddy</string>
+	<string>com.hashvizard.parkingbuddy</string>
 	<key>PROJECT_ID</key>
 	<string>parkingbuddy-4c8fa</string>
 	<key>STORAGE_BUCKET</key>
