--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-calendar-picker": "^6.1.5",
+    "react-native-date-picker": "^4.2.13",
     "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
     "react-native-fast-image": "^8.6.3",
