--- a/ios/ParkingBuddy/Info.plist
+++ b/ios/ParkingBuddy/Info.plist
@@ -28,6 +28,14 @@
 				<string>fb1223106244997939</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.751228707184-3eklsrfbfagdmq8vsa9r22h2ln7uve1j</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
