--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>751228707184-3eklsrfbfagdmq8vsa9r22h2ln7uve1j.apps.googleusercontent.com</string>
+	<string>751228707184-56dehm4vujqofj14fb29hn19380vej2q.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.751228707184-3eklsrfbfagdmq8vsa9r22h2ln7uve1j</string>
+	<string>com.googleusercontent.apps.751228707184-56dehm4vujqofj14fb29hn19380vej2q</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>751228707184-499sorej1l0sago96ffebrac54vo4u5t.apps.googleusercontent.com</string>
+	<string>751228707184-8ppkhsqoq2olhlfmui5bn6sv5qonmml6.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBtUJP7yEkjupAR9_IqdI-hbD1xQAoIjMg</string>
 	<key>GCM_SENDER_ID</key>
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.hashvizard.parkingbuddy</string>
+	<string>com.logix.parkinbuddy</string>
 	<key>PROJECT_ID</key>
 	<string>parkingbuddy-4c8fa</string>
 	<key>STORAGE_BUCKET</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:751228707184:ios:9f0665ed1dc714f365afb5</string>
+	<string>1:751228707184:ios:f7f85fee2fc26c7e65afb5</string>
 </dict>
 </plist>
